fixed spacing issues in about section and changed footer font color

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   margin: 0 auto;
 }
 
+
 /*Navigation, on the right*/
 .flex {
   display: flex;
@@ -61,7 +62,7 @@ nav ul li {
 
 /*Skills section, with pink background*/
 #background {
-  background-image: url('../img/background.jpg');
+  background-image: url('../img/background-best.png');
   background-size: cover;
   height: 700px;
   font-family: 'Open Sans', cursive;
@@ -77,7 +78,7 @@ nav ul li {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 80px;
+  padding: 80px 0 35px 0;
 }
 
 #skills i {
@@ -96,8 +97,8 @@ nav ul li {
 #about {
   font-size: 32px;
   line-height: 42px;
-  padding: 25px 0 0 50px;
-  margin-top: 0px;
+  /*padding: 25px 0 0 50px;
+  margin-top: 0px;*/
 }
 
 #gray-background {
@@ -106,6 +107,7 @@ nav ul li {
   margin-top: 0;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 
 #profile-pic {
@@ -138,4 +140,10 @@ footer a {
 footer {
   display: flex;
   justify-content: space-between;
+  color: #919191;
+}
+
+/*RESUME*/
+.navbar-nav {
+    flex-direction: row;
 }
